generated-tests/tests/snapshots/rust/test_generated_impl_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
impl TestType { fn method(&self) -> i32 { 42 } }

AST:
(source_file
  (impl_item
    (type_identifier)
    (declaration_list
      (function_item
        (identifier method)
        (parameters
          (self_parameter
            (self)
          )
        )
        (primitive_type)
        (block
          (integer_literal)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "method",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "TestType.method",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "TestType",
            kind: TypeIdentifier,
            scope: Some(
                "TestType",
            ),
            start_line: 1,
            start_column: 6,
            end_line: 1,
            end_column: 14,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
