generated-tests/tests/snapshots/rust/test_generated_inner_attribute_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
#![allow(dead_code)]
fn test_fn6() -> i32 { 42 }

AST:
(source_file
  (inner_attribute_item
    (attribute
      (identifier allow)
      (token_tree
        (identifier dead_code)
      )
    )
  )
  (function_item
    (identifier test_fn6)
    (parameters)
    (primitive_type)
    (block
      (integer_literal)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn6",
            line_number: 2,
            definition_type: FunctionDefinition,
            scope: Some(
                "test_fn6",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "allow",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 4,
            end_line: 1,
            end_column: 9,
        },
        SerializableUsage {
            name: "dead_code",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 10,
            end_line: 1,
            end_column: 19,
        },
        SerializableUsage {
            name: "test_fn6",
            kind: Identifier,
            scope: Some(
                "test_fn6",
            ),
            start_line: 2,
            start_column: 4,
            end_line: 2,
            end_column: 12,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 2,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
