generated-tests/tests/snapshots/rust/test_generated_literal.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
42

AST:
(source_file
  (ERROR
    (integer_literal)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
