generated-tests/tests/snapshots/rust/test_generated_macro_invocation.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
println!("{}", var6)

AST:
(source_file
  (macro_invocation
    (identifier println)
    (token_tree
      (string_literal
        (string_content)
      )
      (identifier var6)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "println",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 8,
        },
        SerializableUsage {
            name: "var6",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 16,
            end_line: 1,
            end_column: 20,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
