generated-tests/tests/snapshots/rust/test_generated_match_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
match opt1 { Some(x7) => x7, None => 0 }

AST:
(source_file
  (expression_statement
    (match_expression
      (identifier opt1)
      (match_block
        (match_arm
          (match_pattern
            (tuple_struct_pattern
              (identifier Some)
              (identifier x7)
            )
          )
          (identifier x7)
        )
        (match_arm
          (match_pattern
            (identifier None)
          )
          (integer_literal)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x7",
            position: Position {
                start_line: 1,
                start_column: 19,
                end_line: 1,
                end_column: 21,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "opt1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 11,
            },
        },
        Usage {
            name: "Some",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 18,
            },
        },
        Usage {
            name: "x7",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 19,
                end_line: 1,
                end_column: 21,
            },
        },
        Usage {
            name: "x7",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 26,
                end_line: 1,
                end_column: 28,
            },
        },
        Usage {
            name: "None",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 30,
                end_line: 1,
                end_column: 34,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
