generated-tests/tests/snapshots/rust/test_generated_match_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
match val { x8 => {} }

AST:
(source_file
  (expression_statement
    (match_expression
      (identifier val)
      (match_block
        (match_arm
          (match_pattern
            (identifier x8)
          )
          (block)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x8",
            position: Position {
                start_line: 1,
                start_column: 13,
                end_line: 1,
                end_column: 15,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "val",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 10,
            },
        },
        Usage {
            name: "x8",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 13,
                end_line: 1,
                end_column: 15,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
