generated-tests/tests/snapshots/rust/test_generated_mod_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
mod test_mod { pub fn test_fn7() -> i32 { 42 } }

AST:
(source_file
  (mod_item
    name: (identifier "test_mod")
    body: (declaration_list
      (function_item
        (visibility_modifier)
        name: (identifier "test_fn7")
        parameters: (parameters)
        return_type: (primitive_type "i32")
        body: (block
          (integer_literal "42")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_mod",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 13,
            },
            definition_type: ModuleDefinition,
        },
        Definition {
            name: "test_fn7",
            position: Position {
                start_line: 1,
                start_column: 23,
                end_line: 1,
                end_column: 31,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
